# smartmur-ai-core

./: .env.example  .gitignore  404.html  ACTION-PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yaml.bak.20260303191438  docker-compose.yaml.bak.20260303191954  index.html  install-docker.sh  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml  to-do.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Projects/: Homelab-notes.md  README.md
architecture/: index.html
browser/: index.html
browser_engine/: Dockerfile  __init__.py  app.py
config/: policies.yaml.example
cron/: index.html
dashboard/: Dockerfile  __init__.py  app.py  db.py  deps.py  index.html  middleware.py  models.py
deploy/: telegram-bot.service
docs/: CONFIGURATION.md  DEPLOYMENT.md  RUNBOOKS.md  SECURITY.md  UPGRADE.md  architecture.md  ci-cd.md  cloudflared-setup.md  cron.md  dashboard.md  getting-started.md  good-first-issues.md  heartbeat.md  index.md  skills.md  ssh.md  telegram-bot.md  vault.md  watchers.md  workflows.md
examples/: hosts.yaml  watchers.yaml
getting-started/: index.html
good-first-issues/: index.html
heartbeat/: index.html
mcp-server/: index.html
memory/: index.html
messaging/: index.html
msg_gateway/: Dockerfile  app.py  bus.py  inbound.py  middleware.py  models.py
project-docs/: README.md  session-2026-03-01-night-ops.md
scripts/: capture-dashboard.py  demo-recording.sh  enable-branch-protection.sh  generate-demo-output.py  generate-screenshots.py  phase-runner.sh  project-sync.sh
search/: search_index.json
skills/: index.html  lib.sh
ssh/: index.html
superpowers/: agent_registry.py  agent_router.py  audit.py  auto_install.py  benchmark.py  cli.py  cli_agent.py  cli_audit.py  cli_benchmark.py  cli_browse.py  cli_cron.py  cli_dag.py  cli_dashboard.py  cli_intake.py  cli_jobs.py  cli_launchd.py  cli_llm.py  cli_memory.py  cli_msg.py  cli_orchestrate.py  cli_pack.py  cli_policy.py  cli_release.py  cli_report.py  cli_security.py  cli_setup.py  cli_skill.py  cli_skill_create.py  cli_ssh.py  cli_status.py  cli_template.py  cli_vault.py  cli_watcher.py  cli_workflow.py  cloudflared_monitor.py  config.py  container_watchdog.py  credential_rotation.py  cron_engine.py  cron_runner.py  (+29 more)
telegram-bot/: Dockerfile  entrypoint.py
tests/: test_agent_registry.py  test_audit.py  test_auto_install.py  test_benchmark.py  test_browser.py  test_channels.py  (+72 more)
(+299 files in other folders)
